--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "typescript"
   ],
   "author": "Segun Adebayo",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "prettier": "^2.8.3",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@changesets/cli": "^2.26.0"
   }
 }
