--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lil-fp",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Functional programming utilities for TypeScript",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -42,6 +42,7 @@
   "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@mobily/ts-belt": "^3.13.1",
     "prettier": "^2.8.3",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
