--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "exclude": ["node_modules"],
-  "include": ["src"],
+  "include": ["src", "tests"],
   "compilerOptions": {
-    "lib": ["ESNext", "DOM"],
-    "module": "es2020",
+    "lib": ["dom", "esnext", "dom.iterable"],
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "target": "esnext",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "preserveSymlinks": true
+    "types": ["vitest/globals"]
   }
 }
